completed home page

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,13 +4,89 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      Home
+      <img src="./assets/img/logo-kss.png">
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>If you get lost, the
-    <a target="_blank" rel="noopener" href="https://ionicframework.com/docs">docs</a> will be your guide.</p>
+  <ion-slides pager="true">
+      <ion-slide>
+        <img src="./assets/img/home-banner-small.jpg">
+      </ion-slide>
+      <ion-slide>
+        <img src="./assets/img/home-banner-boys-small.jpg">
+      </ion-slide>
+      <ion-slide>
+        <img src="./assets/img/home-banner-girls-small.jpg">
+      </ion-slide>
+    </ion-slides>
+
+    <div class="container mb-3">
+      <div class="row">
+        <img class="col-6" src="./assets/img/infant-small.jpg">
+        <img class="col-6" src="./assets/img/boy-small.jpg">
+        <img class="col-6" src="./assets/img/girl-small.jpg">
+        <img class="col-6" src="./assets/img/slider-shoes-small.jpg">
+      </div>
+    </div>    
+
+    <div class="container" style="text-align: center;">
+      <div class="trend-focus-wrapper">
+        <img src="./assets/img/woven-tops-small.jpg">
+        <img src="./assets/img/jeans-small.jpg">
+        <img src="./assets/img/ethnic-small.jpg">
+        <img src="./assets/img/infant-accessories-small.jpg">
+        <img src="./assets/img/dresses-small.jpg">
+        <img src="./assets/img/shirt-small.jpg">
+      </div>
+    </div>
+    <br><br>
+    <div class="container">
+      <div class="row" style="text-align: center;">
+        Treding for boys
+      </div>
+      <br>
+      <div class="card-list">
+        <img src="">
+        <img src="./assets/img/boys-shirt-op06-color-white-1-small.jpg">
+        <img src="./assets/img/pc-29028-black-panther-printed-tshirt-color-grey-1-small.jpg">
+        <img src="./assets/img/denim-shorts-1556-color-dark-wash-3-small.jpg">
+        <img src="./assets/img/shirt-4-small.jpg">
+        <img src="./assets/img/shirt-5-shirt-small.jpg">
+      </div>
+    </div>
+
+    <br><br>
+
+    <div class="container">
+      <div class="row" style="text-align: center;">
+        Treding for girls
+      </div>
+      <br>
+      <div class="card-list">
+        <img src="">
+        <img src="./assets/img/171081-a-line-marigold-embroidered-dress-color-turquoise-1-small.jpg">
+        <img src="./assets/img/girl-trouser-small.jpg">
+        <img src="./assets/img/jl-ppg-3-side-girls-hd-hs-top-color-grey-1-small.jpg">
+        <img src="./assets/img/girl-short-small.jpg">
+        <img src="./assets/img/161025-chambray-hemla-dress-coral-color-coral-1-small.jpg">
+      </div>
+    </div>
+
+    <br><br>
+    <div class="container">
+      <div class="row" style="text-align: center;">
+        Treding for infants
+      </div>
+      <br>
+      <div class="card-list">
+        <img src="">
+        <img src="./assets/img/infant-1-small.jpg">
+        <img src="./assets/img/infant-2-small.jpg">
+        <img src="./assets/img/infant-3-small.jpg">
+        <img src="./assets/img/infant-4-small.jpg">
+        <img src="./assets/img/new-born-3009-color-white-1-small.jpg">
+      </div>
+    </div>
 </ion-content>
