--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,1 +1,40 @@
+.row{
+	flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+}
 
+.col-6{
+	-webkit-box-flex: 0;
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+    margin-bottom: 1rem !important;
+}
+
+.container{
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.mb-3{
+    margin-bottom: 1rem !important;
+}
+
+.trend-focus-wrapper{
+	-webkit-columns: 300px;
+    columns: 300px;
+    -webkit-column-gap: 20px;
+    column-gap: 20px;
+}
+
+.card-list{
+	overflow-x: scroll;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: 5px repeat(5, calc(50% - 40px)) 5px;
+    grid-template-rows: minmax(150px, 1fr);
+}
